Add nutrition info support and enhance recipe import
Introduces NutritionInfo entity and repository, links nutrition data to recipes, and adds DTOs for Edamam API integration. Refactors RecipeIngredient and RecipeIngredientId for improved mapping, updates repositories with new query methods, and enhances DatabaseSeeder to import recipes from TheMealDB and fetch nutrition details from Edamam.